# alacritty-colorscheme

./: .gitignore  LICENSE-APACHE  README.md  alacritty-colorscheme  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py  test.sh  watch-test.sh
.github/workflows/: ci.yml
alacritty_colorscheme/: cli.py  colorscheme-yaml.py  colorscheme.py  colorscheme_toml.py  colorscheme_yaml.py  vim.py  yml_to_toml.py
tests/: test_alacritty_colorscheme.py  test_alacritty_colorscheme_toml.py
tests/test-config/: alacritty-with-color.yml  alacritty-without-color.yml
tests/test-config-toml/: alacritty.1.toml  alacritty.toml
tests/test-config-toml/colors/: cob.toml
tests/test-config-toml/tmp/: alacritty.1.toml
tests/test-config/colors/: base16-ocean.yml  base16-spacemacs.yml  base16-zenburn.yml
